packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
/* ==========================================================================
   Gallery default

//== Design Properties
//## Helper classes to change the look and feel of the component
========================================================================== */
// All borders
.widget-gallery-bordered-all {
    .widget-gallery-item {
        border: 1px solid var(--grid-border-color, $grid-border-color);
    }
}

// Vertical borders
.widget-gallery-bordered-vertical {
    .widget-gallery-item {
        border-color: var(--grid-border-color, $grid-border-color);
        border-style: solid;
        border-width: 0;
        border-left-width: 1px;
        border-right-width: 1px;
    }
}

// Horizontal orders
.widget-gallery-bordered-horizontal {
    .widget-gallery-item {
        border-color: var(--grid-border-color, $grid-border-color);
        border-style: solid;
        border-width: 0;
        border-top-width: 1px;
        border-bottom-width: 1px;
    }
}

.widget-gallery-divided-horizontal {
    .widget-gallery-item {
        position: relative;
        &:not(:last-child)::after {
            content: "";
            display: block;
            position: absolute;
            left: 0;
            right: 0;
            border-bottom: 1px solid var(--grid-border-color, $grid-border-color);
            margin-top: calc(var(--spacing-small, $spacing-small) / 2);
        }
    }
}

// Hover styles
.widget-gallery-hover {
    .widget-gallery-items {
        .widget-gallery-item:hover {
            background-color: var(--grid-bg-hover, $grid-bg-hover);
        }
    }
}

// Striped styles
.widget-gallery-striped {
    .widget-gallery-item:nth-child(odd) {
        background-color: var(--grid-bg-striped, $grid-bg-striped);
    }
    .widget-gallery-item:nth-child(even) {
        background-color: #fff;
    }
}

// Grid spacing none
.widget-gallery.widget-gallery-gridgap-none {
    .widget-gallery-items {
        gap: 0;
    }
}

// Grid spacing small
.widget-gallery.widget-gallery-gridgap-small {
    .widget-gallery-items {
        gap: var(--spacing-small, $spacing-small);
    }
}

// Grid spacing medium
.widget-gallery.widget-gallery-gridgap-medium {
    .widget-gallery-items {
        gap: var(--spacing-medium, $spacing-medium);
    }
}

// Grid spacing large
.widget-gallery.widget-gallery-gridgap-large {
    .widget-gallery-items {
        gap: var(--spacing-large, $spacing-large);
    }
}

// Pagination left
.widget-gallery-pagination-left {
    .widget-gallery-pagination {
        .pagination-bar {
            justify-content: flex-start;
        }
    }
}

// Pagination center
.widget-gallery-pagination-center {
    .widget-gallery-pagination {
        .pagination-bar {
            justify-content: center;
        }
    }
}

.widget-gallery-disable-selected-items-highlight {
    // placeholder
    // this class in needed to disable standard styles of highlighted items
}

